--- a/deployment/puppet/node/superleap.xyz.yaml
+++ b/deployment/puppet/node/superleap.xyz.yaml
@@ -1,1 +1,24 @@
 ---
+nginx::nginx_vhosts:
+  'superleap.xyz':
+    ensure: 'present'
+    server_name:
+      - 'superleap.xyz'
+      - 'www.superleap.xyz'
+      - 'dev.superleap.xyz'
+    index_files:
+      - 'index.html'
+      - 'index.htm'
+    use_default_location: false
+    www_root: '/var/www/superleap.xyz/www'
+nginx::nginx_locations:
+  'superleap.xyz':
+    location: '/'
+    vhost: superleap.xyz
+    www_root: '/var/www/superleap.xyz/www'
+    internal: false
+    try_files:
+    index_files:
+      - 'index.html'
+      - 'index.htm'
+    autoindex: 'off'
