--- a/deployment/puppet/common.yaml
+++ b/deployment/puppet/common.yaml
@@ -29,6 +29,17 @@ nginx::nginx_vhosts:
       - 'index.htm'
     use_default_location: false
     www_root: '/var/www/rotaline.xyz/www'
+  'vortex.one':
+    ensure: 'present'
+    server_name:
+      - 'vortex.one'
+      - 'www.vortex.one'
+      - 'dev.vortex.one'
+    index_files:
+      - 'index.html'
+      - 'index.htm'
+    use_default_location: false
+    www_root: '/var/www/vortex.one/www'
 nginx::nginx_locations:
   'superleap.xyz':
     location: '/'
@@ -51,6 +62,16 @@ nginx::nginx_locations:
     location: '/'
     vhost: 'rotaline.xyz'
     www_root: '/var/www/rotaline.xyz/www'
+    internal: false
+    try_files:
+    index_files:
+      - 'index.html'
+      - 'index.htm'
+    autoindex: 'off'
+  'vortex.one':
+    location: '/'
+    vhost: 'vortex.one'
+    www_root: '/var/www/vortex.one/www'
     internal: false
     try_files:
     index_files:
