--- a/deployment/puppet/node/hetzner.development.yaml
+++ b/deployment/puppet/node/hetzner.development.yaml
@@ -1,1 +1,16 @@
 ---
+php::extensions:
+  xdebug:
+    provider: pecl
+    settings:
+      xdebug.default_enable: 1
+      xdebug.remote_autostart: 0
+      xdebug.remote_connect_back: 1
+      xdebug.remote_enable: 1
+      xdebug.remote_handler: "dbgp"
+      xdebug.remote_host: "vmhost"
+      xdebug.remote_port: "9000"
+      xdebug.auto_trace: 1
+      xdebug.cli_color: 1
+      xdebug.collect_params: 2
+      xdebug.var_display_max_depth: 10
