--- a/deployment/puppet/common.yaml
+++ b/deployment/puppet/common.yaml
@@ -151,6 +151,7 @@ php::extensions:
   pdo: {}
   pdo_mysql: {}
   zlib: {}
+  mongo: {}
 php::settings:
   PHP/display_errors: 'On'
   PHP/error_reporting: 'E_ALL & ~E_DEPRECATED & ~E_STRICT'
