--- a/deployment/puppet/node/hetzner.production.yaml
+++ b/deployment/puppet/node/hetzner.production.yaml
@@ -1,1 +1,14 @@
 ---
+mongodb::databases:
+  'production':
+    user: 'production'
+    password: 'production)O9i*U7y^T5r'
+
+mysql::databases:
+  production:
+    host: '%{::ipaddress_eth0}'
+    grant:
+      - 'ALL'
+    name: 'production'
+    user: 'production'
+    password: 'production)O9i*U7y^T5r'
