Redis first working install; custom repo package doesn't work; 0.0.0.0 bind address sometimes malfunctions

--- a/deployment/puppet/common.yaml
+++ b/deployment/puppet/common.yaml
@@ -190,3 +190,13 @@ nodejs::packages:
     ensure: "present"
     provider: "npm"
     require: "Class[nodejs]"
+
+# Redis configuration
+redis::settings:
+  bind: '0.0.0.0'
+  port: 6379
+  service_group: 'redis'
+  service_user: 'redis'
+  manage_repo: false
+  service_enable: true
+  config_owner: 'root'
