--- a/deployment/puppet/common.yaml
+++ b/deployment/puppet/common.yaml
@@ -204,3 +204,9 @@ redis::settings:
   manage_repo: false
   service_enable: true
   config_owner: 'root'
+
+# Go configuration
+golang::version: '1.5.1'
+golang::download_dir: '/usr/local/src'
+golang::download_url: 'https://storage.googleapis.com/golang/go1.5.1.linux-amd64.tar.gz'
+golang::base_dir: '/usr/local/go'
