--- a/deployment/puppet/common.yaml
+++ b/deployment/puppet/common.yaml
@@ -217,3 +217,6 @@ erlang::package: 'erlang'
 
 # RabbitMQ configuration
 rabbitmq::port: '5672'
+
+# Docker configuration
+docker::manage_epel: false
