Updated forge modules and configuration to latest versions

--- a/deployment/puppet/common.yaml
+++ b/deployment/puppet/common.yaml
@@ -110,7 +110,7 @@ nginx::nginx_locations:
 
 # Php configuration
 php::ensure: latest
-php::manage_repos: false
+php::manage_repos: true
 php::fpm: true
 php::dev: true
 php::composer: true
@@ -161,7 +161,7 @@ mongodb::globals:
   server_package_name: 'mongodb-org-server'
   mongos_package_name: 'mongodb-org-mongos'
   client_package_name: 'mongodb-org-shell'
-  version: '3.0.7-1.el7'
+  version: '3.2.4-1.el7'
 mongodb::server:
   ensure: 'present'
   auth: true
@@ -183,7 +183,7 @@ mysql::server:
 
 # NodeJS configuration
 nodejs::settings:
-  version: 'v4.1.2'
+  version: 'v5.9.1'
   target_dir: '/usr/bin'
   make_install: false
 nodejs::packages:
@@ -207,9 +207,9 @@ redis::settings:
   config_owner: 'root'
 
 # Go configuration
-golang::version: '1.5.1'
+golang::version: '1.6'
 golang::download_dir: '/usr/local/src'
-golang::download_url: 'https://storage.googleapis.com/golang/go1.5.1.linux-amd64.tar.gz'
+golang::download_url: 'https://storage.googleapis.com/golang/go1.6.linux-amd64.tar.gz'
 golang::base_dir: '/usr/local/go'
 
 # Erlang configuration
@@ -220,8 +220,7 @@ erlang::package: 'erlang'
 rabbitmq::port: '5672'
 
 # Docker configuration
-docker::manage_epel: false
-docker::version: '1.7.1'
+docker::version: '1.10.3'
 docker::docker_group: 'docker'
 docker::docker_group_default: 'docker'
 docker::docker_users:
